--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ tokio = { version = "1", features = ["full"] }
 axum = "0.6.18"
 serde = { version = "1.0.163", features = ["derive"]}
 serde_json = "1.0.0"
+utoipa = { version = "3.3.0", features = [ "axum_extras" ] }
+utoipa-swagger-ui = { version = "3.1.3" , features = ["axum"] }
